--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
 
             <form action="/" class="form">
                 <label for="email" class="label">Email address</label>
-                <input type="text" id="email" placeholder="youemail@example.com" class="input input-password">
+                <input type="text" id="email" placeholder="youremail@example.com" class="input input-password">
 
                 <label for="password" class="label">Password</label>
                 <input type="password" id="password" placeholder="********" class="input input-password">
